@@ -59,6 +59,7 @@ Version 1.6.22beta03 [February 13, 2016]
     to the LICENSE file, png.h, and the man page.
   Restored "& 0xff" in png_save_uint_16() and png_save_uint_32() that
     were accidentally removed from libpng-1.6.17. 
+  Changed PNG_INFO_cHNK from 0xnnnn to 0xnnnnU (Robert C. Seacord).
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
